--- a/gather/templates/wash/base.html
+++ b/gather/templates/wash/base.html
@@ -26,11 +26,23 @@
 <body class="page am-with-topbar-fixed-top">
 
 <header class="am-topbar am-topbar-fixed-top am-force-show">
-    <a class="titlebar-btn titlebar-city">
-        <span class="current-city">北京</span>
-    </a>
-    <img class="top-logo" src="{% static 'images/wash/top_logo.png' %}" width="100">
-    <a class="titlebar-btn-right" href="#">服务流程</a>
+    <div class="row">
+        <div class="col-xs-4">
+                <span class="current-city">北京</span>
+        </div>
+        <div class="col-xs-4">
+            <img class="top-logo" src="{% static 'images/wash/top_logo.png' %}" width="100">
+        </div>
+        <div class="col-xs-4 text-center">
+                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+                {% if total == 0 %}
+                <span class="badge" id="order_count" style="z-index:100;display:none;position:absolute;background-color:red;">0</span>
+                {% else %}
+                <span class="badge btn-sm" id="order_count" style="z-index:100;position:absolute;background-color:red;margin-top:5px;margin-left: -30px">{{ total }}</span>
+                {% endif %}
+        </div>
+    </div>
+
 </header>
 
 <div class="main">
@@ -41,8 +53,6 @@
 </div>
 
 <nav class="main-nav am-topbar am-topbar-fixed-bottom">
-    <span class="badge" id="order_count" style="z-index:100;display:none;position:absolute;background-color:red;">0</span>
-
     <ul class="am-avg-sm-3">
         <li class="{% block index %}{% endblock %}">
             <a href="{% url 'wash_index' %}" class="item">
@@ -51,7 +61,10 @@
             </a>
         </li>
         <li class="nav-middle {% block show %}{% endblock %}">
-            <a href="#" class="item ">
+<!--
+            <input type="hidden" id="order_count_str" value="{}"/>
+-->
+            <a href="{% url 'wash_show' %}" class="item" id="order_submit">
                 <i class="am-icon-reorder am-icon-sm">
                 </i>
                 <br/>
@@ -73,7 +86,6 @@
 <script type="text/javascript" src="/static/scripts/wash/utils.js"></script>
 <script type="text/javascript" src="/static/scripts/wash/tips.js"></script>
 <script type="text/javascript" src="/static/scripts/bootstrap.min.js"></script>
-
 {% block extra_js %}
 {% endblock %}
 </body>
