--- a/gather/templates/wash/basket.html
+++ b/gather/templates/wash/basket.html
@@ -1,4 +1,6 @@
 {% extends 'wash/base.html' %}
+{% load staticfiles %}
+
 {% block extra_css %}
     <style>
         .order-img{
@@ -7,6 +9,11 @@
         }
     </style>
 {% endblock %}
+
+{% block title_center %}
+<img class="top-logo" src="{% static 'images/wash/basket.png' %}" width="100">
+{% endblock %}
+
 
 {% block content %}
     {% for wash in wash_arr %}
