--- a/gather/templates/wash/show.html
+++ b/gather/templates/wash/show.html
@@ -29,8 +29,8 @@
                 </a>
             </div>
             <div class="col-xs-4">
-                <h4 class="media-heading text-left">{{ wash.belong }}</h4>
-                <label class="media-heading">{{ wash.name }}</label>
+                <h4 class="media-heading text-left">{{ wash.name }}</h4>
+                <label class="media-heading">{{ wash.belong }}</label>
                 <h4>
                     <label style="color:red">￥</label><label class="media-heading">{{ wash.new_price }}</label>元({{ wash.measure }})
                 </h4>
