--- a/gather/templates/wash/manage/index_imgs.html
+++ b/gather/templates/wash/manage/index_imgs.html
@@ -28,7 +28,7 @@
                 <thead>
                 <tr>
                     <th class="center">序号</th>
-                    <th>轮播图</th>
+                    <th>轮播图(750*1077)</th>
                     <th>顺序(从小到大排序)</th>
                     <th>是否显示</th>
                     <th>
