--- a/gather/templates/wash/order.html
+++ b/gather/templates/wash/order.html
@@ -23,6 +23,7 @@
             padding: 10px;
         }
     </style>
+    <link rel="stylesheet" type="text/css" href="/static/styles/datepicker.css">
 {% endblock %}
 
 {% block title_center %}
@@ -34,29 +35,62 @@
 {% endblock %}
 
 {% block content %}
-    <div class="panel panel-default">
       <div class="bs-callout bs-callout-danger">
         <div class="media">
             <div class="media-left">
-                <span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-top:15px;"></span>
+                <span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-top:13px;"></span>
             </div>
             <div class="media-body">
+                {% if address %}
                 <table>
-                    <tr>
-                        <td>收货人：张博</td>
-                        <td class="text-right">15866109318</td>
-                    </tr>
-                    <tr colspan="2">
-                        <td>收货地址：山东菏泽曹县鼓楼家园</td>
-                    </tr>
-                </table>
+                        <tr>
+                            <td width="80px;">收货人：</td>
+                            <td>{{ address.name }}</td>
+                            <td class="text-right">{{ address.phone }}</td>
+                        </tr>
+                        <tr>
+                            <td>收货地址：</td>
+                            <td colspan="2">
+                                {% if address.is_default %}[默认]{% endif %}{{ address.detail }}
+                            </td>
+                        </tr>
+                  </table>
+                {% else %}
+                <div style="margin-top:10px;">
+                    <a href="{% url 'wash_user_address_add'%}" >新建地址</a>
+                </div>
+                {% endif %}
             </div>
+            {% if address %}
             <div class="media-right text-right">
                 <a href="{% url 'wash_user_address' %}"><img class="label_img" src="/static/images/wash/label_right.png"  style="margin-top:10px;"/></a>
             </div>
+            {% endif %}
         </div>
       </div>
-    </div>
+
+      <div class="bs-callout bs-callout-danger">
+        <div class="media">
+            <div class="media-left">
+                <span class="glyphicon glyphicon-calendar" aria-hidden="true" style="margin-top:8px;"></span>
+            </div>
+            <div class="media-body">
+                    <input class="form-control" type="date" value="{{ today|date:'Y-m-d'}}" name="date_from" placeholder="服务时间">
+            </div>
+            <div class="media-right text-right">
+                <div style="margin-top:8px;">
+                    <input type="radio" value="0" checked="checked" name="am_pm"/>上午&nbsp;&nbsp;&nbsp;
+                    <input type="radio" value="0" name="am_pm"/>下午
+                </div>
+            </div>
+        </div>
+      </div>
+
+    <div class="bs-callout bs-callout-danger">
+        <div class="media">
+            <textarea class="form-control" rows="3" name="mark" placeholder="请填写注意事项(选填)"></textarea>
+        </div>
+      </div>
     {% for wash in wash_list %}
     <div class="container-fluid" style="border-bottom:solid 1px #CCCCCC;margin-top:10px;">
         <div clss="row well">
@@ -66,8 +100,8 @@
                 </a>
             </div>
             <div class="col-xs-4">
-                <h4 class="media-heading text-left">{{ wash.belong }}</h4>
-                <label class="media-heading">{{ wash.name }}</label>
+                <h4 class="media-heading text-left">{{ wash.name }}</h4>
+                <label class="media-heading">{{ wash.belong }}</label>
                 <h4>
                     <label style="color:red">￥</label><label class="media-heading" name="price" value="{{ wash.id }}">{{ wash.new_price }}</label>元({{ wash.measure }})
                 </h4>
@@ -78,6 +112,8 @@
         </div>
     </div>
     {% endfor %}
+
+
     <div class="text-right" style="margin:20px;">
         <h4>合计:<span class="label label-danger">{{ price_sum }}</span>元</h4>
     </div>
@@ -96,3 +132,8 @@
 {% endblock %}
 
 {% block show %}on{% endblock %}
+
+{% block extra_js %}
+<script type="text/javascript" src="/static/scripts/bootstrap-datepicker.js"></script>
+<script type="text/javascript" src="/static/scripts/bootstrap-datepicker.zh-CN.js"></script>
+{% endblock %}
