--- a/gather/templates/wash/basket.html
+++ b/gather/templates/wash/basket.html
@@ -10,8 +10,14 @@
     </style>
 {% endblock %}
 
+{% block title_left %}
+    <a href="{% url 'wash_show' %}"><img class="label_img" src="/static/images/wash/label_left.png" /></a>
+{% endblock %}
+
 {% block title_center %}
-<img class="top-logo" src="{% static 'images/wash/basket.png' %}" width="100">
+    <a href="{% url 'wash_show' %}">
+        <img class="top-logo" src="{% static 'images/wash/basket.png' %}" width="100">
+    </a>
 {% endblock %}
 
 
@@ -24,14 +30,14 @@
                     <img class="order-img" src="{{ wash.photo }}" alt="...">
                 </a>
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-5">
                 <h4 class="media-heading text-left">{{ wash.name }}</h4>
                 <label class="media-heading">{{ wash.belong }}</label>
                 <h4>
                     <label style="color:red">￥</label><label class="media-heading" name="price" value="{{ wash.id }}">{{ wash.new_price }}</label>元({{ wash.measure }})
                 </h4>
             </div>
-            <div class="col-xs-5 text-right">
+            <div class="col-xs-4 text-right">
                 <button type="button" class="btn btn-default btn-sm" onclick="order_minus({{ wash.id }})">
                   <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
                 </button>
@@ -45,16 +51,20 @@
         </div>
     </div>
     {% endfor %}
-    <div class="row" style="margin:20px;">
-        <div class="col-xs-9 text-right">
-            <h4>合计<span class="label label-danger" id="price_total">0</span>元</h4>
-        </div>
-        <div class="col-xs-3 text-left">
-            <a href="{% url 'wash_order' %}" class="btn btn-success btn-lg">提交</a>
+
+{% endblock %}
+
+{% block bottom %}
+<nav class="main-nav am-topbar am-topbar-fixed-bottom" style="background-color:white ">
+    <div class="text-center">
+        <h4>
+            合计:<label style="color:red" id="price_total">0</label>元
+            <a href="{% url 'wash_order' %}" class="btn btn-success" style="color:white">提交
+            </a>
+        </h4>
         </div>
     </div>
-
-
+</nav>
 {% endblock %}
 
 {% block show %}on{% endblock %}
