--- a/gather/templates/wash/order.html
+++ b/gather/templates/wash/order.html
@@ -23,11 +23,12 @@
             padding: 10px;
         }
     </style>
-    <link rel="stylesheet" type="text/css" href="/static/styles/datepicker.css">
 {% endblock %}
 
 {% block title_center %}
-<img class="top-logo" src="{% static 'images/wash/basket.png' %}" width="100">
+<a href="{% url 'wash_show' %}">
+    <img class="top-logo" src="{% static 'images/wash/basket.png' %}" width="100">
+</a>
 {% endblock %}
 
 {% block title_left %}
@@ -42,19 +43,19 @@
             </div>
             <div class="media-body">
                 {% if address %}
-                <table>
-                        <tr>
-                            <td width="80px;">收货人：</td>
-                            <td>{{ address.name }}</td>
-                            <td class="text-right">{{ address.phone }}</td>
-                        </tr>
-                        <tr>
-                            <td>收货地址：</td>
-                            <td colspan="2">
-                                {% if address.is_default %}[默认]{% endif %}{{ address.detail }}
-                            </td>
-                        </tr>
-                  </table>
+                <table class="address">
+                    <tr>
+                        <td width="80px;">收货人：</td>
+                        <td>{{ address.name }}</td>
+                        <td class="text-right">{{ address.phone }}</td>
+                    </tr>
+                    <tr>
+                        <td>收货地址：</td>
+                        <td colspan="2">
+                            {% if address.is_default %}[默认]{% endif %}{{ address.detail }}
+                        </td>
+                    </tr>
+                </table>
                 {% else %}
                 <div style="margin-top:10px;">
                     <a href="{% url 'wash_user_address_add'%}" >新建地址</a>
@@ -63,34 +64,40 @@
             </div>
             {% if address %}
             <div class="media-right text-right">
-                <a href="{% url 'wash_user_address' %}"><img class="label_img" src="/static/images/wash/label_right.png"  style="margin-top:10px;"/></a>
+                <a href="{% url 'wash_user_address_select' %}"><img class="label_img" src="/static/images/wash/label_right.png"  style="margin-top:10px;"/></a>
             </div>
             {% endif %}
         </div>
       </div>
 
-      <div class="bs-callout bs-callout-danger">
-        <div class="media">
-            <div class="media-left">
-                <span class="glyphicon glyphicon-calendar" aria-hidden="true" style="margin-top:8px;"></span>
-            </div>
-            <div class="media-body">
-                    <input class="form-control" type="date" value="{{ today|date:'Y-m-d'}}" name="date_from" placeholder="服务时间">
-            </div>
-            <div class="media-right text-right">
-                <div style="margin-top:8px;">
-                    <input type="radio" value="0" checked="checked" name="am_pm"/>上午&nbsp;&nbsp;&nbsp;
-                    <input type="radio" value="0" name="am_pm"/>下午
+    <form action="." method="post" id="order_form">
+        {% csrf_token %}
+        <input type="hidden" value="{{ address.id }}" name="address_id" id="id_useraddress"/>
+        <div class="bs-callout bs-callout-danger">
+            <div class="media">
+                <div class="media-left">
+                    <span class="glyphicon glyphicon-calendar" aria-hidden="true" style="margin-top:16px;"></span>
+                </div>
+                <div class="media-body">
+                    请选择取件时间
+                    <input class="form-control" type="date" value="{{ today|date:'Y-m-d'}}" name="service_time" placeholder="服务时间"/>
+                </div>
+                <div class="media-right text-right">
+                    <div style="margin-top:26px;">
+                        <input type="radio" value="0" checked="checked" name="am_pm"/>上午&nbsp;&nbsp;&nbsp;
+                        <input type="radio" value="0" name="am_pm"/>下午
+                    </div>
                 </div>
             </div>
         </div>
-      </div>
 
-    <div class="bs-callout bs-callout-danger">
-        <div class="media">
-            <textarea class="form-control" rows="3" name="mark" placeholder="请填写注意事项(选填)"></textarea>
+        <div class="bs-callout bs-callout-danger">
+            <div class="media">
+                <textarea class="form-control" rows="3" name="mark" placeholder="请填写注意事项(选填)"></textarea>
+            </div>
         </div>
-      </div>
+    </form>
+
     {% for wash in wash_list %}
     <div class="container-fluid" style="border-bottom:solid 1px #CCCCCC;margin-top:10px;">
         <div clss="row well">
@@ -99,23 +106,22 @@
                     <img class="order-img" src="{{ wash.photo }}" alt="...">
                 </a>
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-5">
                 <h4 class="media-heading text-left">{{ wash.name }}</h4>
                 <label class="media-heading">{{ wash.belong }}</label>
                 <h4>
                     <label style="color:red">￥</label><label class="media-heading" name="price" value="{{ wash.id }}">{{ wash.new_price }}</label>元({{ wash.measure }})
                 </h4>
             </div>
-            <div class="col-xs-5 text-right" style="margin-top:20%">
+            <div class="col-xs-4 text-right" style="margin-top:20%">
                 x{{ wash.count }}
             </div>
         </div>
     </div>
     {% endfor %}
 
-
-    <div class="text-right" style="margin:20px;">
-        <h4>合计:<span class="label label-danger">{{ price_sum }}</span>元</h4>
+    <div class="alert alert-danger text-center" role="alert" style="position:fixed;left:35%;top:30%;display:none" id="order_err">
+        网络错误, 请重试!
     </div>
 
 {% endblock %}
@@ -123,17 +129,29 @@
 {% block bottom %}
 <nav class="main-nav am-topbar am-topbar-fixed-bottom">
     <div class="text-center">
-        <h4 style="color:green">
-             下单<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+        <h4>
+            合计:<label style="color:red">{{ price_sum }}</label>元
+            <button class="btn btn-success" style="color:white" id="order_submit">
+                下单<a class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></a>
+            </button>
         </h4>
     </div>
-
 </nav>
 {% endblock %}
 
 {% block show %}on{% endblock %}
 
 {% block extra_js %}
-<script type="text/javascript" src="/static/scripts/bootstrap-datepicker.js"></script>
-<script type="text/javascript" src="/static/scripts/bootstrap-datepicker.zh-CN.js"></script>
+<script>
+    $("#order_submit").click(function(){
+
+        if($("table.address").length == 0){
+            $("#order_err").css('display', '');
+            $("#order_err").html("请选择地址").show(300).delay(3000).hide(10);
+        }else{
+            $("#order_form").submit();
+        }
+    });
+</script>
 {% endblock %}
+
