regist add modify_code——img

--- a/gather/templates/wash/account.html
+++ b/gather/templates/wash/account.html
@@ -40,7 +40,7 @@
           <img class="account_img" src="/static/images/wash/address.png"/>管理地址
           <img class="label_img" src="/static/images/wash/label_right.png" />
        </a>
-       <a href="#" class="list-group-item">
+       <a href="{% url 'wash_user_order'%}" class="list-group-item">
           <img class="account_img" src="/static/images/wash/order.png"/>订单信息
           <img class="label_img" src="/static/images/wash/label_right.png"/>
        </a>
