--- a/gather/static/styles/wash/base.css
+++ b/gather/static/styles/wash/base.css
@@ -265,3 +265,33 @@ html, body, .main {
         top: -2px;
         font-size: 1.2rem;
         }
+
+        /* 额外的css信息 */
+        .order-img{
+            height:80px;
+            width:65px;
+        }
+        .highlight {
+            border-bottom-left-radius: 4px;
+            border-bottom-right-radius: 4px;
+            border-width: 1px;
+            margin-left: 0;
+            margin-right: 0;
+            margin-top: -16px;
+        }
+        .bs-callout-danger {
+            border-left-color: #ce4844;
+        }
+        .bs-callout {
+            -moz-border-bottom-colors: none;
+            -moz-border-left-colors: none;
+            -moz-border-right-colors: none;
+            -moz-border-top-colors: none;
+            border-color: #eee;
+            border-image: none;
+            border-radius: 3px;
+            border-style: solid;
+            border-width: 1px 1px 1px 5px;
+            margin: 20px 0;
+            padding: 10px;
+        }
