--- a/gather/templates/wash/address_select.html
+++ b/gather/templates/wash/address_select.html
@@ -8,9 +8,14 @@
     <a href="{% url 'wash_order' %}"><img class="label_img" src="/static/images/wash/label_left.png" /></a>
 {% endblock %}
 
+{% block title_right %}
+    <a href="{% url 'wash_user_address' %}?place=select" style="color:black;font-size:15px;">管理</a>
+{% endblock %}
+
 {% block content %}
 <div class="list-group">
     {% for address in addresses %}
+    <a href="{% url 'wash_order'%}?choose={{ address.id }}">
       <div class="list-group-item {% if address.is_default %}disabled{% endif %}">
           <div class="row">
               <div class="col-xs-10">
@@ -30,26 +35,15 @@
               </div>
               {% if address.is_default %}
               <div class="col-xs-2">
-                  <span class="glyphicon glyphicon-ok-sign" aria-hidden="true" style="margin-top:10px;"></span>
+                  <span class="glyphicon glyphicon-ok-sign" aria-hidden="true" style="margin-top:20px;"></span>
               </div>
               {% endif %}
           </div>
       </div>
+    </a>
     {% endfor %}
 </div>
 {% endblock %}
 
 {% block show %}on{% endblock %}
-
-{% block bottom %}
-<nav class="main-nav am-topbar am-topbar-fixed-bottom">
-    <div class="text-center">
-        <h4 style="color:green">
-             <a href="{% url 'wash_user_address_add' %}?place=select"><span class="label label-danger">新增地址</span></a>
-        </h4>
-    </div>
-
-</nav>
-{% endblock %}
-
 
