--- a/gather/templates/wash/order.html
+++ b/gather/templates/wash/order.html
@@ -1,29 +1,5 @@
 {% extends 'wash/base.html' %}
 {% load staticfiles %}
-{% block extra_css %}
-    <style>
-        .order-img{
-            height:90px;
-            width:80px;
-        }
-        .bs-callout-danger {
-            border-left-color: #ce4844;
-        }
-        .bs-callout {
-            -moz-border-bottom-colors: none;
-            -moz-border-left-colors: none;
-            -moz-border-right-colors: none;
-            -moz-border-top-colors: none;
-            border-color: #eee;
-            border-image: none;
-            border-radius: 3px;
-            border-style: solid;
-            border-width: 1px 1px 1px 5px;
-            margin: 20px 0;
-            padding: 10px;
-        }
-    </style>
-{% endblock %}
 
 {% block title_center %}
 <a href="{% url 'wash_show' %}">
@@ -80,7 +56,7 @@
                 </div>
                 <div class="media-body">
                     请选择取件时间
-                    <input class="form-control" type="date" value="{{ today|date:'Y-m-d'}}" name="service_time" placeholder="服务时间"/>
+                    <input class="form-control" type="date" value="{{ today|date:'Y-m-d'}}" name="service_time" placeholder="服务时间" style="width:155px;"/>
                 </div>
                 <div class="media-right text-right">
                     <div style="margin-top:26px;">
@@ -106,14 +82,14 @@
                     <img class="order-img" src="{{ wash.photo }}" alt="...">
                 </a>
             </div>
-            <div class="col-xs-5">
+            <div class="col-xs-6">
                 <h4 class="media-heading text-left">{{ wash.name }}</h4>
                 <label class="media-heading">{{ wash.belong }}</label>
                 <h4>
                     <label style="color:red">￥</label><label class="media-heading" name="price" value="{{ wash.id }}">{{ wash.new_price }}</label>元({{ wash.measure }})
                 </h4>
             </div>
-            <div class="col-xs-4 text-right" style="margin-top:20%">
+            <div class="col-xs-3 text-right" style="margin-top:20%">
                 x{{ wash.count }}
             </div>
         </div>
@@ -144,7 +120,6 @@
 {% block extra_js %}
 <script>
     $("#order_submit").click(function(){
-
         if($("table.address").length == 0){
             $("#order_err").css('display', '');
             $("#order_err").html("请选择地址").show(300).delay(3000).hide(10);
