--- a/gather/templates/wash/regist.html
+++ b/gather/templates/wash/regist.html
@@ -44,6 +44,14 @@
               <button type="button" class="btn btn-info" id="verify_code" style="margin-top:5px;">获取验证码</button>
            </div>
         </div>
+        <div class="row-fluid" style="margin-top:20px;">
+           <div class="col-xs-8">
+              <input class="form-control" name="code" id="code" type="number" placeholder="验证码">
+           </div>
+            <div class="col-xs-4">
+                <img  alt="验证码" src="{% url 'verify_code_img' %}" id="valiCode" onClick="changeVcode()" />
+           </div>
+        </div>
         <br>
         <div class="row-fluid" style="margin-top:40px;margin-bottom:100px;">
            <div class="col-xs-12">
@@ -76,38 +84,5 @@
 {% block index %}on{% endblock %}
 
 {% block extra_js %}
-<script>
-    $("#verify_code").click(function(){
-        $(".alert").css("display", "none");
-        var phone = $("#id_phone").val();
-        if(isNaN(phone) || phone.length != 11){
-            $("#send_err").html("手机号码格式错误");
-            $("#send_err").css("display", "block");
-        }else{
-            $("#verify_code").addClass("disabled");
-            $("#verify_code").html("发送中...");
-        }
-        $.ajax({
-            type: 'post',
-            dataType: "json",
-            url: "{% url 'wash_verify'%}",
-            data: {'phone': phone},
-            success: function(data) {
-                if(data['result']){
-                    $("#send_succ").css("display", "block");
-                    if(data['msg'] == 'login'){
-                        location.href = '/wash/';
-                    }
-                }else{
-                    $("#send_err").html(data['msg']);
-                    $("#send_err").css("display", "block");
-                }
-            },
-            error: function(){
-                $("#send_err").css("display", "block");
-            }
-        });
-
-    });
-</script>
+<script type="text/javascript" src="/static/scripts/wash/regist.js"></script>
 {% endblock %}
