--- a/gather/templates/wash/show.html
+++ b/gather/templates/wash/show.html
@@ -1,19 +1,11 @@
 {% extends 'wash/base.html' %}
-{% block extra_css %}
-    <style>
-        .order-img{
-            height:90px;
-            width:80px;
-        }
-    </style>
-{% endblock %}
 
     {% block navbar %}
     <ul class="nav nav-tabs text-center">
         <li role="presentation" class="active" value="2"><a href="#">上衣</a></li>
         <li role="presentation" value="3"><a href="#">裤子</a></li>
         <li role="presentation" value="1"><a href="#">鞋</a></li>
-        <li role="presentation" value="5"><a href="#">床上用品</a></li>
+        <li role="presentation" value="5"><a href="#">家居</a></li>
         <li role="presentation" value="6"><a href="#">其他</a></li>
     </ul>
     {% endblock %}
@@ -23,28 +15,34 @@
     {% for wash in wash_arr %}
     <div class="container-fluid" style="border-bottom:solid 1px #CCCCCC;margin-top:10px;">
         <div clss="row">
-            <div class="col-xs-3 text-left">
-                <a href="#">
-                    <img class="order-img" src="{{ wash.photo }}" alt="...">
-                </a>
+            <div class="col-xs-2 text-left">
+                <img class="order-img" src="{{ wash.photo }}" alt="..." style="margin-right:10px;">
             </div>
-            <div class="col-xs-5">
-                <h4 class="media-heading text-left">{{ wash.name }}</h4>
-                <label class="media-heading">{{ wash.belong }}</label>
-                <h4>
-                    <label style="color:red">￥</label><label class="media-heading">{{ wash.new_price }}</label>元({{ wash.measure }})
-                </h4>
-            </div>
-            <div class="col-xs-4 text-right">
-                <button type="button" class="btn btn-default btn-sm" onclick="order_minus({{ wash.id }})">
-                  <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
-                </button>
-                <label id="wash_count_{{ wash.id }}">
-                    {{ wash.count }}
-                </label>
-                <button type="button" class="btn btn-default btn-sm" onclick="order_add({{ wash.id }})">
-                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                </button>
+            <div class="col-xs-10">
+                <div clss="row">
+                    <div class="col-xs-5 text-left">
+                        <h4 class="media-heading">&nbsp;&nbsp;{{ wash.name }}</h4>
+                        <label class="media-heading">&nbsp;&nbsp;{{ wash.belong }}</label>
+                    </div>
+                    <div class="col-xs-7 text-right">
+                        <button type="button" class="btn btn-default btn-sm" onclick="order_minus({{ wash.id }})">
+                          <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
+                        </button>
+                        <label id="wash_count_{{ wash.id }}">
+                            {{ wash.count }}
+                        </label>
+                        <button type="button" class="btn btn-default btn-sm" onclick="order_add({{ wash.id }})">
+                          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        </button>
+                    </div>
+                </div>
+                <div clss="row">
+                    <div class="col-xs-12 text-left">
+                        <h4>
+                            &nbsp;&nbsp;<label style="color:red">￥</label><label class="media-heading">{{ wash.new_price }}</label>元({{ wash.measure }})
+                        </h4>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
