--- a/gather/templates/wash/regist.html
+++ b/gather/templates/wash/regist.html
@@ -36,20 +36,21 @@
             </div>
         </div>
         <br><br>
-        <div class="row-fluid" style="margin-top:20px;">
-           <div class="col-xs-8">
-              <input class="form-control" name="code" id="input_code" type="number" placeholder="验证码">
+        <div class="row-fluid" style="margin-top:10px;">
+           <div class="col-xs-7">
+              <input class="form-control" name="code" id="code" type="number" placeholder="图片验证码">
            </div>
-            <div class="col-xs-4">
-              <button type="button" class="btn btn-info" id="verify_code" style="margin-top:5px;">获取验证码</button>
+            <div class="col-xs-5">
+                <img  alt="验证码" src="{% url 'verify_code_img' %}" id="valiCode" onClick="changeVcode()" />
            </div>
         </div>
-        <div class="row-fluid" style="margin-top:20px;">
-           <div class="col-xs-8">
-              <input class="form-control" name="code" id="code" type="number" placeholder="验证码">
+        <br><br>
+        <div class="row-fluid" style="margin-top:10px;">
+           <div class="col-xs-7">
+              <input class="form-control" name="code" id="input_code" type="number" placeholder="手机验证码">
            </div>
-            <div class="col-xs-4">
-                <img  alt="验证码" src="{% url 'verify_code_img' %}" id="valiCode" onClick="changeVcode()" />
+            <div class="col-xs-5">
+              <button type="button" class="btn btn-info" id="verify_code" style="margin-top:5px;">获取验证码</button>
            </div>
         </div>
         <br>
