--- a/gather/templates/wash/manage/order_detail.html
+++ b/gather/templates/wash/manage/order_detail.html
@@ -20,10 +20,11 @@
                 <tr>
                     <th class="center">序号</th>
                     <th>用户手机号</th>
-                    <th>总价</th>
-                    <th>付款方式</th>
-                    <th>订单开始时间</th>
-                    <th>订单结束时间</th>
+                    <th>名称</th>
+                    <th>价格</th>
+                    <th>数量</th>
+                    <th>单位</th>
+                    <th>所属</th>
                     <th>订单状态</th>
                     <th>
                         <i class="icon-time bigger-110"></i>
@@ -33,47 +34,43 @@
                 </tr>
                 </thead>
                 <tbody>
-                {% for order in orders %}
+                {% for detail in details %}
                 <tr>
-                    <td>{{ order.id }}</td>
-                    <td>{{ order.user.phone }}</td>
-                    <td>{{ order.money }}</td>
-                    <td>{{ order.service_begin }}</td>
-                    <td>{{ order.service_end }}</td>
-                    <td>{{ discount.get_status_display }}</td>
-                    <td>{{ discount.created|date:'Y-m-d H:i:s' }}</td>
-                    <td class="hidden-480">
-                        <div class="visible-md visible-lg hidden-sm hidden-xs btn-group">
-                            <a class="btn btn-xs btn-info" href="{% url 'manage_discount_update' discount.id %}">
-                                <i class="icon-edit bigger-120"></i>
-                            </a>
-                        </div>
-                    </td>
+                    <td>{{ detail.id }}</td>
+                    <td>{{ detail.order.user.phone }}</td>
+                    <td>{{ detail.name }}</td>
+                    <td>{{ detail.price }}</td>
+                    <td>{{ detail.count }}</td>
+                    <td>{{ detail.measure }}</td>
+                    <td>{{ detail.belong }}</td>
+                    <td>{{ detail.order.get_status_display }}</td>
+                    <td>{{ detail.created|date:'Y-m-d H:i:s' }}</td>
+                    <td></td>
                 </tr>
                 {% endfor %}
                 </tbody>
             </table>
 
-            {% if orders %}
+            {% if details %}
             <nav class="margin-right">
                 <ul class="pagination">
-                    {% if orders.has_previous %}
+                    {% if details.has_previous %}
                     <li>
-                        <a href="?page={{ orders.previous_page_number }}" aria-label="Previous">
+                        <a href="?page={{ details.previous_page_number }}" aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
                     {% endif %}
                     {% for num in page_numbers %}
-                    {% if num ==  orders.number %}
+                    {% if num ==  details.number %}
                     <li class="active"><a href="#">{{ num }}</a></li>
                     {% else %}
                     <li><a href="?page={{ num }}">{{ num }}</a></li>
                     {% endif %}
                     {% endfor %}
-                    {% if orders.has_next %}
+                    {% if details.has_next %}
                     <li>
-                        <a href="?page={{ orders.next_page_number }}" aria-label="Next">
+                        <a href="?page={{ details.next_page_number }}" aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
