--- a/gather/templates/wash/index.html
+++ b/gather/templates/wash/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="order-now">
         <!--<a href="{% url 'wash_show' %}">-->
-        <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx88c30f037ed63a21&redirect_uri=http%3a%2f%2fwww.jacsice.cn%2fwechat%2foauth%2fcode%2f&response_type=code&scope=snsapi_base&state=123#wechat_redirect">
+        <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx88c30f037ed63a21&redirect_uri=http://www.jacsice.cn/wechat/oauth/code/&response_type=code&scope=snsapi_base&state=123#wechat_redirect">
             <b>一键下单</b>
         </a>
     </div>
