--- a/gather/templates/wash/user_order.html
+++ b/gather/templates/wash/user_order.html
@@ -62,7 +62,7 @@
     </ul>
     {% endfor %}
 {% else %}
-无订单
+<center style="margin-top:100px;" ><a class='btn btn-success' href="{% url 'wash_show'%}">无订单~去下单</a></center>
 {% endif %}
 {% endblock %}
 
