wechat and cms add order detail

--- a/gather/templates/wash/address_add.html
+++ b/gather/templates/wash/address_add.html
@@ -72,6 +72,11 @@
         </tr>
         <tr>
             <td>
+                <span class="label label-danger">注意</span>目前仅支持望京地区。
+            </td>
+        </tr>
+        <tr>
+            <td>
                 <textarea name="mark" class="form-control" id="id_mark" rows="3" placeholder="详细地址"></textarea>
             </td>
         </tr>
