--- a/gather/templates/base.html
+++ b/gather/templates/base.html
@@ -8,7 +8,7 @@
 {% block title %}
 <title>GATHER</title>
 {% endblock %}
-<link href="{% static "styles/bootstrap.css" %}" rel="stylesheet" type="text/css">
+<link href="{% static "styles/bootstrap.min.css" %}" rel="stylesheet" type="text/css">
 <link href="{% static "styles/regist.css" %}" rel="stylesheet" type="text/css">
 <link href="{% static "styles/bookmark.css" %}" rel="stylesheet" type="text/css">
 <link href="{% static "styles/add.css" %}" rel="stylesheet" type="text/css">
