--- a/gather/templates/wash/manage/order.html
+++ b/gather/templates/wash/manage/order.html
@@ -1,5 +1,29 @@
 {% extends 'wash/manage/base.html' %}
-
+{% block extra_css %}
+<style>
+.btn {
+    -moz-user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.42857;
+    margin-bottom: 0;
+    padding: 6px 12px;
+    text-align: center;
+    vertical-align: middle;
+    white-space: nowrap;
+}
+    .btn-success {
+        background-color: #5cb85c;
+        border-color: #4cae4c;
+        color: #fff
+    }
+</style>
+{% endblock %}
 {% block order_menu %}style="display:block"{% endblock %}
 {% block nav_bar %}
 <ul class="breadcrumb">
@@ -29,7 +53,8 @@
                         <i class="icon-time bigger-110"></i>
                         创建日期
                     </th>
-                    <th class="hidden-480">操作</th>
+                    <th>详情</th>
+                    <th>操作</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -43,16 +68,40 @@
                     <td>{{ order.service_end|default:'未开始' }}</td>
                     <td>{{ order.get_status_display }}</td>
                     <td>{{ order.created|date:'Y-m-d H:i:s' }}</td>
-                    <td class="hidden-480">
-                        <div class="visible-md visible-lg hidden-sm hidden-xs btn-group">
-                            {% if order.discount %}
-                            <a class="btn btn-xs btn-info" href="{% url 'manage_discount_update' discount.id %}">
-                                <i class="icon-edit bigger-120"></i>
-                            </a>
-                            {% else %}
-                            无
+                    <td><button class="btn btn-success">详情</button></td>
+                    <td>
+                        <form action="." method="post">
+                            {% csrf_token %}
+                            <input type="hidden" name="oid" value="{{ order.id }}"/>
+                        {% if order.status == 1 %}
+                            <button type="submit" class="btn btn-success" name="next" value="true">
+                              <span class="glyphicon glyphicon-ok" aria-hidden="true" id=""></span>确认
+                            </button>
+                            <button type="submit" class="btn btn-danger" name="close" value="true">
+                              <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>关闭
+                             </button>
+                        {% elif order.status == 2%}
+                            <button type="submit" class="btn btn-info" name="next" value="true">
+                              <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>清洗
+                            </button>
+                        {% elif order.status == 3%}
+                            <button type="submit" class="btn btn-success" name="next" value="true">
+                              <span class="glyphicon glyphicon-plane" aria-hidden="true"></span>派送
+                            </button>
+                        {% elif order.status == 4%}
+                            <button type="submit" class="btn btn-success" name="next" value="true">
+                              <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>结束
+                            </button>
+                        {% endif %}
+                            {% if order.status == 2 or order.status == 3 or order.status == 4 %}
+                            <button type="submit" class="btn btn-warning" name="cancel" value="true">
+                              <span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>撤销
+                             </button>
+                            <button type="submit" class="btn btn-danger" name="close" value="true">
+                              <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>关闭
+                             </button>
                             {% endif %}
-                        </div>
+                        </form>
                     </td>
                 </tr>
                 {% endfor %}
