--- a/gather/templates/wash/regist.html
+++ b/gather/templates/wash/regist.html
@@ -31,6 +31,7 @@
     <form action="." method="post">
         {% csrf_token %}
         <input type="hidden" name="open_id" value="{{ open_id }}"/>
+        <input type="hidden" name="next" value="{{ next }}"/>
         <div class="row-fluid">
             <div class="col-xs-12">
                 <input type="number" placeholder="请输入手机号" name="phone" id="id_phone" class="form-control">
