--- a/gather/templates/wash/user_order.html
+++ b/gather/templates/wash/user_order.html
@@ -15,7 +15,7 @@
 
 {% block title_center %}
     <a href="{% url 'wash_show' %}">
-        <img class="top-logo" src="{% static 'images/wash/basket.png' %}" width="100">
+        <img class="top-logo" src="{% static 'images/wash/order_title.png' %}" width="100">
     </a>
 {% endblock %}
 
