add menu auto_login

--- a/gather/templates/wash/order.html
+++ b/gather/templates/wash/order.html
@@ -73,7 +73,7 @@
                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true" style="margin-top:5px;"></span>
                 </div>
                 <div class="media-body">
-                    <span class="label label-danger">注意</span> <label style="color:grey">衣服小于六件加收10元运费</label>
+                    <span class="label label-danger">注意</span> <label style="color:grey">衣服小于30件加收8元运费</label>
                 </div>
             </div>
         </div>
